--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "fetch-factory": "^0.2.1",
     "js-sha256": "^0.9.0",
     "primereact": "^9.3.1",
     "react": "^18.2.0",
